<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:checked="true"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history" />
        <item
            android:id="@+id/nav_videos"
            android:icon="@drawable/ic_videos"
            android:title="@string/videos" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_image"
            android:title="@string/gallery" />
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_videocam"
            android:title="@string/live_feed" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>