<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home">

    <TextView
        android:id="@+id/output"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="337dp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_gravity="bottom|center_horizontal"/>

    <Button
        android:id="@+id/acknowledgeButton"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="239dp"
        android:background="@drawable/button_bg"
        android:text="@string/acknowledge"
        android:textColor="@color/colorButtonText"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="35dp"
        android:layout_gravity="bottom|center_horizontal"/>

    <Button
        android:id="@+id/callAPIButton"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="165dp"
        android:background="@drawable/button_bg"
        android:text="@string/call_gmail_api"
        android:textColor="@color/colorButtonText"
        app:layout_constraintBottom_toTopOf="@+id/activationButton"
        tools:layout_editor_absoluteX="0dp"
        android:layout_gravity="bottom|center_horizontal"/>

    <Button
        android:id="@+id/activationButton"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="93dp"
        android:background="@drawable/button_bg"
        android:text="@string/sleeping"
        android:textColor="@color/colorButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp"
        android:layout_gravity="bottom|center_horizontal"/>

</FrameLayout>