<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">
    
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimaryDark"
            app:popupTheme="@style/AppTheme">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabTextColor="@color/colorButtonText"
            app:tabSelectedTextColor="@color/colorButtonText"
            app:tabIndicatorColor="@color/colorButtonText"
            app:tabIndicatorHeight="5dp"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/output"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="337dp"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        android:textSize="20sp" />

    <Button
        android:id="@+id/acknowledgeButton"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="239dp"
        android:background="@drawable/button_bg"
        android:text="@string/acknowledge"
        android:textColor="@color/colorButtonText"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="35dp" />

    <Button
        android:id="@+id/callAPIButton"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="165dp"
        android:background="@drawable/button_bg"
        android:text="@string/call_gmail_api"
        android:textColor="@color/colorButtonText"
        app:layout_constraintBottom_toTopOf="@+id/activationButton"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/activationButton"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="93dp"
        android:background="@drawable/button_bg"
        android:text="@string/sleeping"
        android:textColor="@color/colorButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />

</RelativeLayout>